bk_ida/gccida/g2/convert_from_eh_region_ranges
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1885:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1885:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1890:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1890:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1899:4: error: expected ';' after expression
rtx v27; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1899:5: error: use of undeclared identifier 'v27'
rtx v27; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1910:4: error: expected ';' after expression
rtx resume; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1910:5: error: use of undeclared identifier 'resume'; did you mean 'rename'?
rtx resume; // rdi 
    ^~~~~~
    rename
/usr/include/stdio.h:146:12: note: 'rename' declared here
extern int rename (const char *__old, const char *__new) __THROW;
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1912:4: error: expected ';' after expression
rtx label; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1912:5: error: use of undeclared identifier 'label'
rtx label; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1914:4: error: expected ';' after expression
rtx continue_label; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1914:5: error: use of undeclared identifier 'continue_label'
rtx continue_label; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1922:4: error: expected ';' after expression
rtx insns; // [rsp+8h] [rbp-30h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1922:5: error: use of undeclared identifier 'insns'
rtx insns; // [rsp+8h] [rbp-30h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1995:1: error: use of undeclared identifier 'insns'
insns = get_insns( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:1996:35: error: use of undeclared identifier 'insns'
convert_from_eh_region_ranges_1( &insns, v11, 0); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:2005:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( rtx, REG_EH_REGION, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:2005:10: error: expected identifier or '('
reg_note = find_reg_note( rtx, REG_EH_REGION, 0LL); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/except.c:2006:7: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
v14 = reg_note; 
      ^~~~~~~~
      reg_names
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/hard-reg-set.h:485:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/convert_from_eh_region_ranges/src/obj/except.o] Error 1
